--- a/format/defaults.html
+++ b/format/defaults.html
@@ -155,8 +155,8 @@ format but where you don't actually want to change the formatting.</p>
 </span><span class="boring">use rust_xlsxwriter::{Format, Workbook, XlsxError};
 </span>
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;formats.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a worksheet.
     let worksheet = workbook.add_worksheet();
@@ -168,7 +168,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.write_string_only(0, 0, &quot;Hello&quot;)?;
     worksheet.write_string(1, 0, &quot;Hello&quot;, &amp;format)?;
 
-    workbook.close()?;
+    workbook.save(&quot;formats.xlsx&quot;)?;
 
     Ok(())
 }
