--- a/format/locals.html
+++ b/format/locals.html
@@ -155,8 +155,8 @@ a number format with a &quot;grouping/thousands&quot; separator and a &quot;deci
 </span>use rust_xlsxwriter::{Format, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;number_format.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a worksheet.
     let worksheet = workbook.add_worksheet();
@@ -166,7 +166,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     worksheet.write_number(0, 0, 1234.56, &amp;currency_format)?;
 
-    workbook.close()?;
+    workbook.save(&quot;number_format.xlsx&quot;)?;
 
     Ok(())
 }
