--- a/formulas/future_functions.html
+++ b/formulas/future_functions.html
@@ -160,7 +160,7 @@ section below.</p>
 </span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
-</span><span class="boring">    let mut workbook = Workbook::new(&quot;future_function.xlsx&quot;);
+</span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write a future function without prefix. This gives an Excel error.
@@ -173,7 +173,7 @@ section below.</p>
 </span><span class="boring">    worksheet.write_number_only(3, 1, 1.15)?;
 </span><span class="boring">    worksheet.write_number_only(4, 1, 1.22)?;
 </span><span class="boring">
-</span><span class="boring">    workbook.close()?;
+</span><span class="boring">    workbook.save(&quot;future_function.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
@@ -189,7 +189,7 @@ section below.</p>
 </span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
-</span><span class="boring">    let mut workbook = Workbook::new(&quot;future_function.xlsx&quot;);
+</span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write a future function with explicit prefix.
@@ -202,7 +202,7 @@ section below.</p>
 </span><span class="boring">    worksheet.write_number_only(3, 1, 1.15)?;
 </span><span class="boring">    worksheet.write_number_only(4, 1, 1.22)?;
 </span><span class="boring">
-</span><span class="boring">    workbook.close()?;
+</span><span class="boring">    workbook.save(&quot;future_function.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
@@ -220,7 +220,7 @@ have <code>rust_xlsxwriter</code> automatically handle future functions for you:
 </span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
-</span><span class="boring">    let mut workbook = Workbook::new(&quot;future_function.xlsx&quot;);
+</span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write a future function and automatically add the required prefix.
@@ -234,7 +234,7 @@ have <code>rust_xlsxwriter</code> automatically handle future functions for you:
 </span><span class="boring">    worksheet.write_number_only(3, 1, 1.15)?;
 </span><span class="boring">    worksheet.write_number_only(4, 1, 1.22)?;
 </span><span class="boring">
-</span><span class="boring">    workbook.close()?;
+</span><span class="boring">    workbook.save(&quot;future_function.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
