--- a/formulas/intro.html
+++ b/formulas/intro.html
@@ -152,7 +152,7 @@
 </span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
 </span><span class="boring">
 </span><span class="boring">fn main() -&gt; Result&lt;(), XlsxError&gt; {
-</span><span class="boring">    let mut workbook = Workbook::new(&quot;formula.xlsx&quot;);
+</span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span>
     worksheet.write_formula_only(0, 0, &quot;=10*B1 + C1&quot;)?;
@@ -160,7 +160,7 @@
     worksheet.write_number_only(0, 1, 5)?;
     worksheet.write_number_only(0, 2, 1)?;
 <span class="boring">
-</span><span class="boring">    workbook.close()?;
+</span><span class="boring">    workbook.save(&quot;formula.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
