--- a/tutorial/tutorial3.html
+++ b/tutorial/tutorial3.html
@@ -162,8 +162,8 @@
         (&quot;Gym&quot;, 100, &quot;2022-09-28&quot;),
     ];
 <span class="boring">
-</span><span class="boring">    // Create a new Excel file.
-</span><span class="boring">    let mut workbook = Workbook::new(&quot;tutorial3.xlsx&quot;);
+</span><span class="boring">    // Create a new Excel file object.
+</span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">
 </span><span class="boring">    // Add a bold format to use to highlight cells.
 </span><span class="boring">    let bold = Format::new().set_bold();
@@ -201,8 +201,8 @@
 </span><span class="boring">    worksheet.write_string(row, 0, &quot;Total&quot;, &amp;bold)?;
 </span><span class="boring">    worksheet.write_formula(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
 </span><span class="boring">
-</span><span class="boring">    // Close the file.
-</span><span class="boring">    workbook.close()?;
+</span><span class="boring">    // Save the file to disk.
+</span><span class="boring">    workbook.save(&quot;tutorial3.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
@@ -230,8 +230,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
         (&quot;Gym&quot;, 100, &quot;2022-09-28&quot;),
     ];
 
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;tutorial3.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a bold format to use to highlight cells.
     let bold = Format::new().set_bold();
@@ -269,8 +269,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.write_string(row, 0, &quot;Total&quot;, &amp;bold)?;
     worksheet.write_formula(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
 
-    // Close the file.
-    workbook.close()?;
+    // Save the file to disk.
+    workbook.save(&quot;tutorial3.xlsx&quot;)?;
 
     Ok(())
 }
@@ -300,8 +300,8 @@ input data and then format it, in Excel, with a number format.</p>
 </span><span class="boring">        (&quot;Gym&quot;, 100, &quot;2022-09-28&quot;),
 </span><span class="boring">    ];
 </span><span class="boring">
-</span><span class="boring">    // Create a new Excel file.
-</span><span class="boring">    let mut workbook = Workbook::new(&quot;tutorial3.xlsx&quot;);
+</span><span class="boring">    // Create a new Excel file object.
+</span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">
 </span><span class="boring">    // Add a bold format to use to highlight cells.
 </span><span class="boring">    let bold = Format::new().set_bold();
@@ -339,8 +339,8 @@ input data and then format it, in Excel, with a number format.</p>
 </span><span class="boring">    worksheet.write_string(row, 0, &quot;Total&quot;, &amp;bold)?;
 </span><span class="boring">    worksheet.write_formula(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
 </span><span class="boring">
-</span><span class="boring">    // Close the file.
-</span><span class="boring">    workbook.close()?;
+</span><span class="boring">    // Save the file to disk.
+</span><span class="boring">    workbook.save(&quot;tutorial3.xlsx&quot;)?;
 </span><span class="boring">
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
