--- a/examples/colors.html
+++ b/examples/colors.html
@@ -155,8 +155,8 @@ in the rust_xlsxwriter library.</p>
 </span>use rust_xlsxwriter::*;
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;colors.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a worksheet.
     let worksheet = workbook.add_worksheet();
@@ -243,8 +243,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.write_string_only(19, 0, &quot;#DAA520&quot;)?;
     worksheet.write_blank(19, 1, &amp;color_format)?;
 
-    // Close and save the file.
-    workbook.close()?;
+    // Save the file to disk.
+    workbook.save(&quot;colors.xlsx&quot;)?;
 
     Ok(())
 }
