--- a/examples/formatting.html
+++ b/examples/formatting.html
@@ -157,8 +157,8 @@ sections of the Excel &quot;Format Cells&quot; dialog.</p>
 use rust_xlsxwriter::*;
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;cell_formats.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a general heading format.
     let header_format = Format::new()
@@ -391,8 +391,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
         .set_pattern(XlsxPattern::Gray0625);
     worksheet.write_string(4, 1, &quot;Pattern fill&quot;, &amp;fill_format2)?;
 
-    // Close and save the file.
-    workbook.close()?;
+    // Save the file to disk.
+    workbook.save(&quot;cell_formats.xlsx&quot;)?;
 
     Ok(())
 }
