--- a/examples/hello_world.html
+++ b/examples/hello_world.html
@@ -155,8 +155,8 @@ rust_xlsxwriter library.</p>
 </span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;hello.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a worksheet to the workbook.
     let worksheet = workbook.add_worksheet();
@@ -167,8 +167,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Write a number to cell (1, 0) = A2.
     worksheet.write_number_only(1, 0, 12345)?;
 
-    // Close the file.
-    workbook.close()?;
+    // Save the file to disk.
+    workbook.save(&quot;hello.xlsx&quot;)?;
 
     Ok(())
 }
