--- a/format/colors.html
+++ b/format/colors.html
@@ -154,8 +154,8 @@ style RGB integer value or a limited number of defined colors, for example:</p>
 </span>use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;colors.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     let format1 = Format::new().set_font_color(XlsxColor::Red);
     let format2 = Format::new().set_font_color(XlsxColor::Green);
@@ -172,7 +172,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.write_string(4, 0, &quot;#FFACFF&quot;, &amp;format5)?;
     worksheet.write_string(5, 0, &quot;#CC7E16&quot;, &amp;format6)?;
 
-    workbook.close()?;
+    workbook.save(&quot;colors.xlsx&quot;)?;
 
     Ok(())
 }
