--- a/format/intro.html
+++ b/format/intro.html
@@ -157,8 +157,8 @@ borders, alignment and number formatting.</p>
 </span>use rust_xlsxwriter::{Format, Workbook, XlsxBorder, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;formats.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a worksheet.
     let worksheet = workbook.add_worksheet();
@@ -197,7 +197,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let format10 = Format::new().set_bold().set_italic();
     worksheet.write_string(9, 0, &quot;Bold and Italic&quot;, &amp;format10)?;
 
-    workbook.close()?;
+    workbook.save(&quot;formats.xlsx&quot;)?;
 
     Ok(())
 }
