--- a/getting_stared.html
+++ b/getting_stared.html
@@ -177,8 +177,8 @@ rust_xlsxwriter = &quot;0.8.0&quot;
 </span>use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;hello.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Add a worksheet to the workbook.
     let worksheet = workbook.add_worksheet();
@@ -189,8 +189,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Write a number to cell (1, 0) = A2.
     worksheet.write_number_only(1, 0, 12345)?;
 
-    // Close the file.
-    workbook.close()?;
+    // Save the file to disk.
+    workbook.save(&quot;hello.xlsx&quot;)?;
 
     Ok(())
 }
