--- a/performance.html
+++ b/performance.html
@@ -179,7 +179,7 @@ results, however these results are indicative of the relative performance.</p>
 </span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
 </span>
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    let mut workbook = Workbook::new(&quot;rust_perf_test.xlsx&quot;);
+    let mut workbook = Workbook::new();
     let worksheet = workbook.add_worksheet();
 
     let row_max = 4000;
@@ -194,7 +194,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
             }
         }
     }
-    workbook.close()?;
+    workbook.save(&quot;rust_perf_test.xlsx&quot;)?;
 
     Ok(())
 }
