--- a/worksheet/intro.html
+++ b/worksheet/intro.html
@@ -155,8 +155,8 @@
 use rust_xlsxwriter::{Format, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;demo.xlsx&quot;);
+    // Create a new Excel file object.
+    let mut workbook = Workbook::new();
 
     // Create some formats to use in the worksheet.
     let bold_format = Format::new().set_bold();
@@ -189,7 +189,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let date = NaiveDate::from_ymd(2023, 1, 25);
     worksheet.write_date(6, 0, date, &amp;date_format)?;
 
-    workbook.close()?;
+    // Save the file to disk.
+    workbook.save(&quot;demo.xlsx&quot;)?;
 
     Ok(())
 }
