--- a/workbook/saving.html
+++ b/workbook/saving.html
@@ -206,7 +206,8 @@ case you can use the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwr
 </span><span class="boring">    Ok(())
 </span><span class="boring">}
 </span></code></pre>
-<p>You can also save the xlsx file data to a <code>Vec&lt;u8&gt;</code> buffer via the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_buffer"><code>workbook.save_to_buffer()</code></a> method:</p>
+<p>You can also save the xlsx file data to a <code>Vec&lt;u8&gt;</code> buffer via the
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.save_to_buffer"><code>workbook.save_to_buffer()</code></a> method:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
